Refactor extension for Wox integration
The commit involves a major overhaul of the existing chrome extension in order to ensure compatibility with Wox. This included deletion of several files, creation of new ones, and modifications of others. The purpose is to ensure seamless interaction between the extension and Wox as part of the broader initiative to improve overall user experience.

--- a/package.json
+++ b/package.json
@@ -1,40 +1,37 @@
 {
-  "name": "chrome-extension-typescript-starter",
+  "name": "wox",
   "version": "1.0.0",
-  "description": "chrome-extension-typescript-starter",
+  "description": "Wox extension",
   "main": "index.js",
   "scripts": {
     "watch": "webpack --config webpack/webpack.dev.js --watch",
     "build": "webpack --config webpack/webpack.prod.js",
     "clean": "rimraf dist",
-    "test": "npx jest",
     "style": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "author": "",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
+    "url": "https://github.com/Wox-launcher/Wox.Chrome.Extension.git"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/chrome": "0.0.158",
-    "@types/jest": "^29.5.0",
-    "@types/react": "^18.0.29",
-    "@types/react-dom": "^18.0.11",
-    "copy-webpack-plugin": "^9.0.1",
-    "glob": "^7.1.6",
-    "jest": "^29.5.0",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.2 ",
-    "ts-jest": "^29.1.0",
-    "ts-loader": "^8.0.0",
-    "typescript": "^5.0.4",
-    "webpack": "^5.76.0",
-    "webpack-cli": "^4.0.0",
-    "webpack-merge": "^5.0.0"
+    "@types/chrome": "0.0.268",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "glob": "^10.3.15",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "rimraf": "^5.0.7",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-merge": "^5.10.0"
   }
 }
